--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,162 @@
-h1 {
-    color: red;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+:root {
+    --main-color: #54b689;
+    --main-text-color: #fff;
+    --border-color: #999;
+    --bio-bg-color: #1E2A3A;
+    --bio-border-color: #293544;
+    --about-bg-color: #111821;
+
+}
+
+.highlight {
+    color: var(--main-color);
+}
+
+#container {
+    display: flex;
+    flex-direction: row;
+    color: var(--main-text-color);
+}
+
+#about-container {
+    flex:  1 1 80%;
+    min-height: 100%;
+    background-color: var(--about-bg-color);
+}
+
+#bio-container {
+    flex: 1 1 20%;
+    min-height: 100vh;
+    background-color: var(--bio-bg-color);
+    text-align: center;
+    padding: 30px 12px;
+    border-right: 5px solid var(--bio-border-color);
+}
+
+#bio-container h2 {
+    margin-bottom: 30px;
+}
+
+#bio-container p {
+    margin-bottom: 20px;
+}
+
+#social-container {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    border-bottom: 1px;
+    margin-bottom: 25px;
+    padding-bottom: 25px;
+
+}
+#bio-container #welcome-text {
+    font-weight: bold;
+}
+
+#email-container {
+    display: flex;
+    justify-content: center;
+}
+#email-container a {
+    flex: 1 1 0;
+    text-decoration: none;
+    max-width: 225;
+}
+
+
+#name {
+    font-size: 42px;
+    margin-bottom: 15px;
+}
+
+#title {
+    font-size: 24;
+    margin-bottom: 25px;
+    font-weight: bold;
+}
+
+.description {
+    max-width: 75%;
+    margin-bottom: 10px;
+}
+
+#btn-project {
+    font-weight: bold;
+    font-size: 16px;
+    color: var(--main-text-color);
+    background-color: var(--main-color);
+    border: 2px solid var(--main-color);
+    border-radius: 5px;
+    text-decoration: none;
+    transition: 5s;
+    margin: 25px 0;
+    padding: 12px 10px;
+    width: 150px;
+    text-align: center;
+    display: flex;
+}
+
+#btn-project:hover {
+    background-color: transparent;
+}
+#skills-section-title {
+    border-top: 1px solid var(--border-color);
+    padding-top: 20px;
+    margin-bottom: 20px;
+    font-size: 32px;
+}
+
+#skills-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 25px;
+
+}
+
+.skill-box {
+    flex: 1 1 33%;
+    max-width: 33%;
+    margin-bottom: 35px;
+}
+
+.skills-title {
+    font-size: 24px;
+    margin-bottom: 25px;
+    font-weight: bold;
+    padding-left: 10px;
+    border-left: 5px solid var(--main-color)
+}
+@media(max-widht:450px) {
+    #container {
+        flex-direction: column;
+    }
+    #bio-container {
+        min-height: auto;
+        border-right: none;
+        border-bottom: 5px solid var(--border-color);
+    }
+
+    #bio-container h2 {
+        display: none;
+
+    }
+    #bio-container p {
+        max-width: 60%;
+        margin: 10px auto;
+    }
+    #about-container {
+        text-align: center;
+        padding: 30px;
+    }
+    #about-container .description {
+        margin: 10px auto;
+        max-width: 100%;
+        line-height: 26px;
+    }
 }
